# cGAN-image-colorization

./: .gitignore  D_model_architecture  G_model_architecture  README.md  README.txt  dataset.py  evaluation.py  inference.py  model_architecture  network.py  play2.ipynb  playground.ipynb  pyproject.toml  scratch.ipynb  training.py
